--- a/Src/output.css
+++ b/Src/output.css
@@ -524,6 +524,9 @@
   .collapse {
     visibility: collapse;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
   }
@@ -542,20 +545,44 @@
   .table {
     display: table;
   }
+  .h-\[200px\] {
+    height: 200px;
+  }
   .max-h-16 {
     max-height: calc(var(--spacing) * 16);
   }
   .max-h-\[80px\] {
     max-height: 80px;
   }
+  .max-h-\[200px\] {
+    max-height: 200px;
+  }
+  .max-h-\[300px\] {
+    max-height: 300px;
+  }
+  .max-h-\[px\] {
+    max-height: px;
+  }
   .min-h-\[80px\] {
     min-height: 80px;
+  }
+  .min-h-\[300px\] {
+    min-height: 300px;
+  }
+  .w-\[200px\] {
+    width: 200px;
   }
   .max-w-\[80px\] {
     max-width: 80px;
   }
+  .max-w-\[200px\] {
+    max-width: 200px;
+  }
   .min-w-\[80px\] {
     min-width: 80px;
+  }
+  .min-w-\[200px\] {
+    min-width: 200px;
   }
   .border-collapse {
     border-collapse: collapse;
