--- a/Src/styles.css
+++ b/Src/styles.css
@@ -7,10 +7,10 @@ color: white;
 padding: 5px;
 margin-top: 0px;
 margin-left: 0px;
-margin-right: 0px;
+margin-right: 6px;
 margin-bottom: 2px;
 border: 2px solid black;
-max-width: 150px;
+max-width: 200px;
 max-height: 60px;
 text-align: center;
 border-radius: 5px;
@@ -29,7 +29,7 @@ border-radius: 5px;
     justify-content: space-between;
     border-radius: 5px;
     border: solid black 2px;
-
+    margin-bottom: 5px;
 }
 
 /* scanline animation */
